--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -2,6 +2,7 @@
 <div class ="container-fluid">
   <div class ="row">
     <div class ="col-3">
+      <p>Hello, <%= current_user.username %></p>
       <div class ="card">
         <div class ="card-body">
           <%= render 'form', room: Room.new %>
