--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -10,19 +10,11 @@
       </ul>
     </div>
   <% end %>
+  <%= form.hidden_field :room_id, value: room.id %>
 
-  <div class="field">
-    <%= form.label :content %>
-    <%= form.text_area :content %>
-  </div>
-
-  <div class="field">
-    <%= form.hidden_field :room_id %>
-    <%= form.hidden_field :room_id, value: room.id %>
-  </div>
-
-  <div class="actions">
-    <%= form.submit %>
+  <div class="input-group">
+    <%= form.text_field :content, placeholder: 'Type your message here...', class: 'form-control mr-2' %>
+    <%= form.submit "Add Message", class: 'btn btn-primary' %>
   </div>
 <% end %>
 
