--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -2,7 +2,6 @@
 <div class ="container-fluid">
   <div class ="row">
     <div class ="col-3">
-      <p>Hello, <%= current_user.username %></p>
       <div class ="card">
         <div class ="card-body">
           <%= render 'form', room: Room.new %>
@@ -22,9 +21,27 @@
     <div class ="col-9">
       <% if @room.present? %>
         <div class ="chat-room">
-          <p><%= @room.name %></p>
+          <nav class="navbar navbar-light bg-light mb-4">
+            <span class="navbar-brand" href="#">
+              <%= @room.name %>
+            </span>
+            <ul class ="navbar-nav">
+              <li class ="nav-item">
+                Hello, <%= current_user.username %>
+              </li>
+            </ul>
+          </nav>
           <% @room.messages.each do |message| %>
-            <p><%= message.content %> - <%= message.user.username %></p>
+          <div class ="message mb-2 <%= 'me' if message.user == current_user %>">
+            <div class ="content-container">
+              <div class ="content">
+                <%= message.content %>
+              </div>
+              <div class ="author">
+                <%= message.user.username %>
+              </div>
+            </div>
+          </div>
           <% end %>
           <div class ="chat-box">
             <%= render 'messages/form', message: Message.new, room: @room %>
