--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -2,6 +2,7 @@
   height: 100vh;
   // have everyscroll within
   overflow-y: hidden;
+  // overflow-y: auto;
   .message {
     min-height: 59px;
     .content-container {
