--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -1,8 +1,8 @@
 .chat-room {
   height: 100vh;
   // have everyscroll within
-  overflow-y: hidden;
-  // overflow-y: auto;
+  // overflow-y: hidden;
+  overflow-y: scroll;
   .message {
     min-height: 59px;
     .content-container {
