--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: message, local: true) do |form| %>
+<%= form_for(message, remote: true) do |form| %>
   <% if message.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(message.errors.count, "error") %> prohibited this message from being saved:</h2>
@@ -14,7 +14,7 @@
 
   <div class="input-group">
     <%= form.text_field :content, placeholder: 'Type your message here...', class: 'form-control mr-2' %>
-    <%= form.submit "Add Message", class: 'btn btn-primary' %>
+    <%= form.submit "Add Message", class: 'btn btn-primary', id: 'chat-btn' %>
   </div>
 <% end %>
 
